# bl-pac

./: Cargo.toml  LICENSE  README.md
bl602/: Cargo.toml  README.md  bl602.svd
bl602/src/: aon.rs  cci.rs  cks.rs  dma.rs  ef_ctrl.rs  ef_data_0.rs  ef_data_1.rs  glb.rs  gpip.rs  hbn.rs  i2c.rs  ir.rs  l1c.rs  lib.rs  pds.rs  pwm.rs  rf.rs  sec_dbg.rs  sec_eng.rs  sf_ctrl.rs  spi.rs  timer.rs  tzc_nsec.rs  tzc_sec.rs  uart.rs
bl602/src/aon/: acomp0_ctrl.rs  acomp1_ctrl.rs  acomp_ctrl.rs  aon.rs  aon_common.rs  aon_misc.rs  bg_sys_top.rs  dcdc18_top_0.rs  dcdc18_top_1.rs  gpadc_reg_cmd.rs  gpadc_reg_config1.rs  gpadc_reg_config2.rs  gpadc_reg_define.rs  gpadc_reg_isr.rs  gpadc_reg_raw_result.rs  gpadc_reg_result.rs  gpadc_reg_scn_neg1.rs  gpadc_reg_scn_neg2.rs  gpadc_reg_scn_pos1.rs  gpadc_reg_scn_pos2.rs  gpadc_reg_status.rs  hbncore_resv0.rs  hbncore_resv1.rs  ldo11soc_and_dctest.rs  psw_irrcv.rs  rf_top_aon.rs  tsen.rs  xtal_cfg.rs
bl602/src/cci/: cci_addr.rs  cci_cfg.rs  cci_ctl.rs  cci_rdata.rs  cci_wdata.rs
bl602/src/cks/: cks_config.rs  cks_out.rs  data_in.rs
bl602/src/dma/: dma_c0config.rs  dma_c0control.rs  dma_c0dst_addr.rs  dma_c0lli.rs  dma_c0src_addr.rs  dma_c1config.rs  dma_c1control.rs  dma_c1dst_addr.rs  dma_c1lli.rs  dma_c1src_addr.rs  dma_c2config.rs  dma_c2control.rs  dma_c2dst_addr.rs  dma_c2lli.rs  dma_c2src_addr.rs  dma_c3config.rs  dma_c3control.rs  dma_c3dst_addr.rs  dma_c3lli.rs  dma_c3src_addr.rs  dma_enbld_chns.rs  dma_int_err_clr.rs  dma_int_error_status.rs  dma_int_status.rs  dma_int_tcclear.rs  dma_int_tcstatus.rs  dma_raw_int_error_status.rs  dma_raw_int_tcstatus.rs  dma_soft_breq.rs  dma_soft_lbreq.rs  dma_soft_lsreq.rs  dma_soft_sreq.rs  dma_sync.rs  dma_top_config.rs
bl602/src/ef_ctrl/: ef_crc_ctrl_0.rs  ef_crc_ctrl_1.rs  ef_crc_ctrl_2.rs  ef_crc_ctrl_3.rs  ef_crc_ctrl_4.rs  ef_crc_ctrl_5.rs  ef_if_0_manual.rs  ef_if_0_status.rs  ef_if_ana_trim_0.rs  ef_if_cfg_0.rs  ef_if_ctrl_0.rs  ef_if_cyc_0.rs  ef_if_cyc_1.rs  ef_if_sw_usage_0.rs  ef_reserved.rs  ef_sw_cfg_0.rs
bl602/src/ef_data_0/: ef_ana_trim_0.rs  ef_cfg_0.rs  ef_data_0_lock.rs  ef_dbg_pwd_high.rs  ef_dbg_pwd_low.rs  ef_key_slot_0_w0.rs  ef_key_slot_0_w1.rs  ef_key_slot_0_w2.rs  ef_key_slot_0_w3.rs  ef_key_slot_1_w0.rs  ef_key_slot_1_w1.rs  ef_key_slot_1_w2.rs  ef_key_slot_1_w3.rs  ef_key_slot_2_w0.rs  ef_key_slot_2_w1.rs  ef_key_slot_2_w2.rs  ef_key_slot_2_w3.rs  (+15 more)
bl616/: Cargo.toml  README.md  bl616.svd
bl616/src/: auadc.rs  audac.rs  crc.rs  dma.rs  generic.rs  glb.rs  gpip.rs  lib.rs
(+730 files in other folders)
