[package]
name = "bl616-pac"
description = "Embedded Rust's Peripheral Access Crate for BL616/618 RISC-V WiFi microcontroller"
version = "0.0.0"
authors = ["Bouffalo Lab <support@bouffalolab.com>", "Sipeed Co.,Ltd. <support@sipeed.com>", "luojia65 <me@luojia.cc>"]
edition = "2021"
repository = "https://github.com/bouffalolab/bl616-pac"
documentation = "https://docs.rs/bl616-pac"
license = "MulanPSL-2.0"
readme = "README.md"
keywords = ["riscv", "bl616", "bl618", "pac"]
categories = ["embedded", "hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = { version = "1.0", optional = true }
riscv-rt = { version = "0.11.0", optional = true }
riscv = "0.10.1"
vcell = "0.1.3"
portable-atomic = "1.0"

[features]
rt = ["riscv-rt"]
